<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">乐高教育社区</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="course_section">章节</string>
    <string name="course_discussion">讨论</string>
    <string name="course_question">问答</string>
    <string name="course_note">笔记</string>
    <string name="allQuestion">全部</string>
    <string name="myNoticeQurstion">我关注的</string>
    <string name="myAskQuestion">我提问的</string>
    <string name="xrecyclerview_header_hint_normal">下拉刷新</string>
    <string name="xlrecyclerview_header_hint_ready">释放立即刷新</string>
    <string name="xrecyclerview_header_hint_loading">正在刷新...</string>
    <string name="xrecyclerview_header_hint_refresh_success">刷新成功</string>
    <string name="xrecyclerview_header_hint_refresh_failure">刷新失败</string>
    <string name="refresh_done">刷新完成</string>
    <string name="click_to_loadmore">点击加载更多数据</string>
    <string name="xrecyclerview_header_last_time">最近更新：</string>
    <string name="xrecyclerview_footer_loadmore">加载更多...</string>
    <string name="xrecyclerview_footer_loading">正在加载...</string>
    <string name="xrecyclerview_footer_hint_normal">加载更多</string>
    <string name="xrecyclerview_footer_hint_ready">释放立即加载</string>
    <string name="xrecyclerview_footer_never_hasdata">没有更多的数据了</string>
    <string name="loading_done">加载完成</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="layout_loading_text">正在加载...</string>
    <string name="load_fail_message">数据加载失败，请点击重试</string>
    <string name="network_error">请求失败,请稍后再试</string>
    <string name="parse_error">数据解析错误</string>
    <string name="create_success">创建成功</string>
    <string name="alter_success">修改成功</string>
    <string name="delete_error">删除失败</string>
    <string name="connect_error">当前网络不可用</string>
    <string name="empty_questions">暂无问答</string>
    <string name="empty_follow">暂无关注</string>
    <string name="empty_ask">暂无提问</string>
    <string name="select_all">全选</string>
    <string name="invert_selection">反选</string>
    <string name="empty_msg">暂无数据</string>
    <string name ="nosupport_courseware">由于文件格式问题，\n暂不支持预览，\n请用电脑登录网站进行本节学习</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="study_says">研说</string>
    <string name="study_says_emptylist">没有研说信息~</string>
    <string name="study_says_detail">研说详情</string>
    <string name="study_says_all">全部研说</string>
    <string name="study_says_my">我的</string>
    <string name="gen_class">创课</string>
    <string name="gen_class_emptylist">没有创课信息~</string>
    <string name="gen_class_emptyDetail">没有此创课信息</string>
    <string name="gen_class_detail">创课详情</string>
    <string name="gen_class_all">全部创课</string>
    <string name="gen_class_my">我的</string>
    <string name="gen_class_xf">创课想法</string>
    <string name="gen_class_introduce">创课介绍</string>
    <string name="gen_class_topic">【主题描述】</string>
    <string name="gen_class_realia">【乐高教具】</string>
    <string name="gen_class_realiaSummary">【教具介绍】</string>
    <string name="gen_class_realiaUseReason">【使用理由】</string>
    <string name="gen_class_frame_design">课程框架设计</string>
    <string name="gen_class_topicBase">【课标依据】</string>
    <string name="gen_class_learnDetail">【如何学习】</string>
    <string name="gen_class_designPrinciple">【设计原则】</string>
    <string name="gen_class_activity_design">教学活动设计</string>
    <string name="gen_class_stem_element">【STEM元素】</string>
    <string name="gen_class_examples">【联系】</string>
    <string name="gen_class_models">【建构】</string>
    <string name="gen_class_rethink">【反思】</string>
    <string name="gen_class_expand">【拓展】</string>
    <string name="gen_class_course_resource">课程资源</string>
    <string name="gen_class_empty_resource">没有课程资源</string>
    <string name="gen_class_teach_advise">建议</string>
    <string name="teach_active">活动</string>
    <string name="teach_active_emptylist">没有活动信息~</string>
    <string name="teach_active_detail">活动详情</string>
    <string name="teach_active_all">全部活动</string>
    <string name="teach_active_my">我的</string>
    <string name="gen_class_explain">教师可通过发表创课分享教学想法，一方面可以通过大众点赞获得自我成就感和认同感，从而激发课堂教学创新的热情，另一方面还可以获得来自大众用户的反馈与建议，不断优化教学方式，每个创课的想法通过60天大众考验，获得大众喜欢的创课可以得到平台支持拍摄公开课，并在活动版区中进行课程的推广。</string>
    <string name="gen_class_idea">发表创课，将你的课程教学想法说出来。结合一些新技术新应用或教学器材，围绕你的课堂教学提出一个教学想法，通过你的想法创建一个学生喜欢的课堂并达到教学目标，内容请简短描写你的课程教学想法和亮点。</string>
    <string name="gen_class_support">以1000个点赞为目标，让更多人支持你的计划。将想法分享到微信和QQ群，告诉你认识的每一个人（甚至是你不知道的人）来支持你的计划，召集大家进行头脑风暴听取他人的建议，在建议中形成可行性方案。</string>
    <string name="gen_class_advise">收集100个创课建议，将获得平台专家关注。收集其他教师的创课想法的建议或支持鼓励，对热门的创课想法，平台将组织专家对达到评审要求的创课想法和课程方案进行评审，我们会根据课程完善度与老师协商开展公开课活动邀请支持者参与</string>
    <string name="gen_class_build">60天内将想法变成行动，收集建议完成课程设计。收集交流区的建议后，在60天内不断完善这个创课想法，形成一个令人信服的课程体系建设纲要让更多人了解和支持你的行动。</string>
    <string name="gen_class_viewing">通过专家评审，平台将支持课程建设与推广。通过平台专家审核的创新课堂的教学想法，我们将提供部分课程教学启动资金、视频拍摄、网络交流及课程的推广服务等相关支持，帮助教师成就课堂创新。</string>
    <string name="about_us">关于我们</string>
    <string name="school_address">校址</string>
    <string name="school_address_text">中国 广东 广州市新港中路351号</string>
    <string name="email">邮箱</string>
    <string name="email_address">nea@gdei.edu.cn</string>
    <string name="internet_addresses">网址</string>
    <string name="internet_addresses_text">px.lingnan.edu.cn</string>
    <string name="telphone">电话</string>
    <string name="telphone_number">020-34113597</string>
    <string name="technical_support">技术支持</string>
    <string name="technical_company">广州昊易网络科技有限公司</string>
    <string name="educational_consulting_phone">400-998-9352</string>
</resources>
