<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.1"
        android:background="@color/defaultColor"
        android:orientation="vertical">

        <com.haoyu.app.view.AppToolBar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:show_right_button="false"
            app:title_text="@string/about_us" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_horizontal" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="@dimen/margin_minus_25"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_size_12"
            android:layout_marginRight="@dimen/margin_size_12"
            android:background="@drawable/about_us_shape"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_size_30">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_16"
                android:layout_marginRight="@dimen/margin_size_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/about_school_location" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_size_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/school_address"
                        android:textColor="@color/blow_gray"
                        android:textSize="@dimen/font_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_6"
                        android:text="@string/school_address_text"
                        android:textSize="@dimen/font_size_16" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_16"
                android:layout_marginRight="@dimen/margin_size_10"
                android:layout_marginTop="@dimen/margin_size_12"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/about_email" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_size_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textColor="@color/blow_gray"
                        android:textSize="@dimen/font_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_6"
                        android:text="@string/email_address"
                        android:textSize="@dimen/font_size_16" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_callPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_16"
                android:layout_marginRight="@dimen/margin_size_10"
                android:layout_marginTop="@dimen/margin_size_12"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/about_phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_size_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telphone"
                        android:textColor="@color/blow_gray"
                        android:textSize="@dimen/font_size_16" />

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_6"
                        android:text="@string/telphone_number"
                        android:textSize="@dimen/font_size_16" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_size_16"
                android:layout_marginRight="@dimen/margin_size_10"
                android:layout_marginTop="@dimen/margin_size_12"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/about_support" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_size_16">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/technical_support"
                        android:textColor="@color/blow_gray"
                        android:textSize="@dimen/font_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_size_6"
                        android:text="@string/technical_company"
                        android:textSize="@dimen/font_size_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>