<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.haoyu.app.view.AppToolBar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_button_image="@drawable/app_back"
        app:right_button_image="@drawable/teaching_research_create"
        app:show_right_button="true"
        app:title_text="教研" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_says"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/teach_study_tab"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_size_12"
                android:paddingTop="@dimen/margin_size_12"
                android:text="@string/study_says"
                android:textSize="@dimen/font_size_16" />

            <RadioButton
                android:id="@+id/rb_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/teach_study_tab"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_size_12"
                android:paddingTop="@dimen/margin_size_12"
                android:text="@string/gen_class"
                android:textSize="@dimen/font_size_16" />

            <RadioButton
                android:id="@+id/rb_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/teach_study_tab"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/margin_size_12"
                android:paddingTop="@dimen/margin_size_12"
                android:text="@string/teach_active"
                android:textSize="@dimen/font_size_16" />
        </RadioGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/spaceColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:id="@+id/line_says"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_size_2"
                    android:layout_weight="1"
                    android:background="@color/defaultColor" />

                <View
                    android:id="@+id/line_class"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_size_2"
                    android:layout_weight="1"
                    android:background="@color/defaultColor"
                    android:visibility="invisible" />

                <View
                    android:id="@+id/line_activity"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_size_2"
                    android:layout_weight="1"
                    android:background="@color/defaultColor"
                    android:visibility="invisible" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>